# website

./: .editorconfig  .gitignore  .typos.toml  COPYING  Cargo.toml  LICENSE  LICENSE-MIT  Shuttle.toml  flake.nix  justfile  setup-hooks.sh  shell.nix
.github/: dependabot.yml
.github/workflows/: deploy.yml  rust.yml  static.yml
img/backgrounds/: sources.txt
img/gifs/smilies/: source.txt  sources.txt
nix/: default.nix  shell.nix
res/: mimi-banner.psd  mimi-the-car.psd  mimi.psd
scripts/: common.sh  load-secrets.sh  setup-hooks.sh  sitemap.sh  unwebhook-all.sh  webhook-all.sh
src/: constants.rs  main.rs  sse.rs  static_files.rs  templates.rs
src/api/: github.rs  mod.rs  sse.rs
src/data/: badges.rs  mod.rs  projects.rs
src/metadata/: mod.rs  robots.rs  sitemap.rs  uri.rs
static/: humans.txt  oneko.js  styles.css
styles/: animations.scss  base.scss  fonts.scss  main.scss  reset.scss  text.scss  themes.scss  transitions.scss
styles/layouts/: base.scss
styles/pages/: donate.scss  home.scss
styles/partials/: animations.scss  fonts.scss  footer.scss  header.scss  notification.scss  project.scss  reusable-header.scss  scrollbar.scss  sidebar.scss  text.scss
templates/: base.tera
templates/layouts/: base.tera
templates/pages/: construction.tera  contact.tera  donate.tera  error.tera  home.tera  legal.tera  projects.tera
templates/partials/: badge.tera  footer.tera  header.tera  main.js  notification.js  project.tera  schema.json  sidebar.tera  sse.js
templates/shortcodes/: github.html  wakatime.html
