[package]
name = "website"
description = "my personal website :3"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-MIT-WITH-Happy-Bunny OR MIT"
homepage = "https://adamperkowski.dev"
repository = "https://github.com/adamperkowski/website"
authors = ["Adam Perkowski <adas1per@protonmnail.com>"]

[dependencies]
async-stream = { version = "0.3.6", default-features = false }
axum = { version = "0.8.6", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hmac = { version = "0.12.1", default-features = false }
lazy_static = "1.5.0"
rust-embed = "8.8.0"
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tera = { version = "1.20.0", default-features = false, features = ["builtins"] }
tokio = { version = "1.48.0", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
tower-http = { version = "0.6.6", default-features = false, features = ["fs"] }
